# core-template

./: .editorconfig  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLA.md  CODEOWNERS  COMMERCIAL.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deno.json  ip.manifest.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: board_bringup.md  board_request.md  bug_report.md  ip_request.md
.github/workflows/: board_registry.yml  deno.yml  docs.yml  license.yml  rtl_lint.yml  rust.yml  sim_verilator.yml
LICENSES/: AGPL-3.0-or-later.txt  CC-BY-SA-4.0.txt  CERN-OHL-S-2.0.txt
crates/af-board-db/: Cargo.toml
crates/af-field-ref/: Cargo.toml
crates/af-host/: Cargo.toml
crates/af-report/: Cargo.toml
crates/af-vectors/: Cargo.toml
crates/af-verilator-runner/: Cargo.toml
crates/xtask/: Cargo.toml
crates/xtask/src/: gowin.rs  lattice_oss.rs  main.rs  quartus.rs  reports.rs  spdx.rs  tasks_new.rs  verilator.rs  vivado.rs
docs/: 00_overview.md  01_architecture.md  02_interface.md  03_microarchitecture.md  04_verification_plan.md  05_timing_and_constraints.md  06_resource_report.md  07_board_targets.md  08_release_checklist.md  09_portability_rules.md  10_commercial_licensing.md  11_fpga_family_notes.md  12_toolchain_notes.md  13_security_and_side_channels.md  board_matrix.md
registries/: boards.registry.json  fpga_families.json  ip_categories.json  toolchains.registry.json
reports/: README.md
reports/timing/: README.md
vectors/: README.md  af_mod_add_basic.json  af_mod_add_random.json  af_mod_add_random.svh
(+185 files in other folders)
