[workspace]
resolver = "2"
members = [
  "crates/af-field-ref",
  "crates/af-vectors",
  "crates/af-host",
  "crates/af-verilator-runner",
  "crates/xtask",
  "crates/af-board-db",
  "crates/af-report"
]
default-members = [
  "crates/af-field-ref",
  "crates/af-vectors",
  "crates/af-verilator-runner",
  "crates/xtask",
  "crates/af-board-db",
  "crates/af-report"
]

[workspace.package]
edition = "2021"
license = "AGPL-3.0-or-later"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.5", features = ["derive"] }
